--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <table cellspacing="20">
 
     <tr>
-      <td> <img src="Aditya.JPG" alt="Aditya Bhanot"></td>
+      <td> <img src="https://i.imgur.com/rgUEKag.jpg" alt="Aditya Bhanot"></td>
 
 
       <td>
